[project]
name = "verve-vero-common"
version = "1.0.0"
description = "Shared auth, database, and middleware for Verve Vero microservices"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verve_vero_common"]
